...
    <string name="koreatech_email_url">https://email.koreatech.ac.kr/</string>

    <!-- Required value in actionbardrawertoggle -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="signup_to_login">이미 계정이 있으신가요? <b> 로그인하기 </b> </string>
    <string name="back_button_pressed">정말 저장하지 않고 나가시겠어요?</string>
    <string name="erase_button_pressed">정말 전체를 지우겠어요?</string>

    <!-- Board -->
    <string name="board_number">글번호</string>
    <string name="board_view_count">조회</string>
    <string name="board_comment_count">댓글수</string>
...
